# polytope-unfolder

./: .gitignore  HACKING.md  README.md  algorithm.md  nets.ipynb  polys.json  pyproject.toml  stl.ipynb  test_notebook.py  tope.md  tox.ini
data/: 10s-short.json  20s.json  polys2.json
notebooks/: combined.ipynb  combined.py  main.py  stl.ipynb
scripts/: get-polys.py
tests/: __init__.py  run_notebook.py  test_graph.py  test_net.py  test_orth.py  test_plot.py  test_stl.py  test_tope.py
tope/: __init__.py  affine.py  graph.py  net.py  orth.py  plot.py  stl.py  tope.py
